dnl
dnl configure.in file for GoboHide
dnl
AC_INIT
AC_CONFIG_SRCDIR(src/gobohide.c)
AM_INIT_AUTOMAKE(gobohide, 0.12)

AC_PROG_CC
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION(0.13.1)

AC_CHECK_HEADERS(sys/ioctl.h linux/fcntl.h linux/fs.h)
AC_CHECK_FUNCS(ioctl)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([m4/Makefile])
AC_CONFIG_FILES([po/Makefile.in])
AC_CONFIG_FILES([man/Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
